--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Perguntas de Programaçãotitle>
+    <title>Perguntas de Programação</title>
 </head>
 
 <body>
